feat: add Virus Lord 3D game with online leaderboard and security fixes

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                 <span class="navbar__toggle-bar"></span>
             </button>
             <ul class="navbar__menu" id="navMenu">
-                <li><a href="#story" class="navbar__link">Câu Chuyện</a></li>
-                <li><a href="#brothers" class="navbar__link">Anh Em</a></li>
-                <li><a href="#moments" class="navbar__link">Khoảnh Khắc</a></li>
-                <li><a href="#contact" class="navbar__link">Liên Hệ</a></li>
+                <li><a href="index.html#story" class="navbar__link">Câu Chuyện</a></li>
+                <li><a href="index.html#brothers" class="navbar__link">Anh Em</a></li>
+                <li><a href="index.html#moments" class="navbar__link">Khoảnh Khắc</a></li>
+                <li><a href="games.html" class="navbar__link">Chơi GAME</a></li>
+                <li><a href="index.html#contact" class="navbar__link">Liên Hệ</a></li>
             </ul>
         </div>
     </nav>
