fix: change Home button to Game List button for better navigation

--- a/games/virus-lord/index.html
+++ b/games/virus-lord/index.html
@@ -93,7 +93,7 @@
 
         <div style="display: flex; gap: 10px; justify-content: center; margin-top: 20px;">
             <button class="restart-btn" onclick="location.reload()" style="margin-top: 0; flex: 1;">CHƠI LẠI</button>
-            <button class="restart-btn" onclick="location.href='../../index.html'" style="margin-top: 0; flex: 1; border-color: #0ff; color: #0ff;">VỀ TRANG CHỦ</button>
+            <button class="restart-btn" onclick="location.href='../../games.html'" style="margin-top: 0; flex: 1; border-color: #0ff; color: #0ff;">DANH SÁCH GAME</button>
         </div>
     </div>
 
